<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unsa.etf.rma.amina_salcin.drugaspirala.ListeFragment">

    <Button
        android:id="@+id/dKategorija"
        android:layout_width="123dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/kategorije"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/dDodajKnjigu"
        android:layout_width="124dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/dodaj_knjigu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tekstPretraga" />

    <Button
        android:id="@+id/dAutor"
        android:layout_width="123dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/autori"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dDodajKategoriju"
        android:layout_width="124dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:text="@string/dodaj_kategoriju"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dPretraga"
        tools:enabled="true" />

    <Button
        android:id="@+id/dPretraga"
        android:layout_width="112dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:text="@string/pretraga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dKategorija" />

    <EditText
        android:id="@+id/tekstPretraga"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Pretrazi"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dAutor" />

    <ListView
        android:id="@+id/listaKategorija"
        android:layout_width="0dp"
        android:layout_height="237dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dDodajOnline" />

    <Button
        android:id="@+id/dDodajOnline"
        android:layout_width="124dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="Add book online"
        app:layout_constraintTop_toBottomOf="@+id/dDodajKategoriju"
        tools:layout_editor_absoluteX="0dp" />
</android.support.constraint.ConstraintLayout>
