<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/eNaslovna"
        android:layout_width="79dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eNaziv"
        android:layout_width="241dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/naziv_knjige"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintStart_toEndOf="@+id/eNaslovna"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eAutor"
        android:layout_width="202dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/ime_i_prezime_autora"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        app:layout_constraintEnd_toEndOf="@+id/eNaziv"
        app:layout_constraintStart_toStartOf="@+id/eNaziv"
        app:layout_constraintTop_toBottomOf="@+id/eNaziv" />

    <TextView
        android:id="@+id/eDatumObjavljivanja"
        android:layout_width="202dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        app:layout_constraintEnd_toEndOf="@+id/eAutor"
        app:layout_constraintStart_toStartOf="@+id/eAutor"
        app:layout_constraintTop_toBottomOf="@+id/eAutor" />

    <TextView
        android:id="@+id/eBrojStranica"
        android:layout_width="202dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        app:layout_constraintEnd_toEndOf="@+id/eDatumObjavljivanja"
        app:layout_constraintStart_toStartOf="@+id/eDatumObjavljivanja"
        app:layout_constraintTop_toBottomOf="@+id/eDatumObjavljivanja" />

    <TextView
        android:id="@+id/eOpis"
        android:layout_width="322dp"
        android:layout_height="89dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        app:layout_constraintEnd_toEndOf="@+id/eBrojStranica"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="@+id/eBrojStranica"
        app:layout_constraintTop_toBottomOf="@+id/eBrojStranica" />

    <Button
        android:id="@+id/dPreporuci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/recommend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eOpis" />

</android.support.constraint.ConstraintLayout>
